improve appearance of bowler list; make footer fixed on small viewports

--- a/src/components/Layout/RegistrationLayout/RegistrationLayout.module.scss
+++ b/src/components/Layout/RegistrationLayout/RegistrationLayout.module.scss
@@ -9,7 +9,7 @@
 
   main {
     margin-top: 0.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
   }
   h1 {
     font-size: 1.5rem;
@@ -24,6 +24,10 @@
     padding-top: 2px;
     padding-bottom: 2px;
     background-color: var(--tournio-bookend-bg);
+
+    position: fixed;
+    width: 100%;
+    bottom: 0;
   }
 
   @media (min-width: 576px) {
